@@ -3,6 +3,10 @@
    - deraadt@cvs.openbsd.org 2005/03/31 18:39:21
      [scp.c]
      copy argv[] element instead of smashing the one that ps will see; ok otto
+   - djm@cvs.openbsd.org 2005/04/02 12:41:16
+     [scp.c]
+     since ssh has xstrdup, use it instead of strdup+test. unbreaks -Werror
+     build
 
 20050331
  - (dtucker) OpenBSD CVS Sync
